@@ -670,7 +670,7 @@ Glib::ustring Utils::create_local_image_uri(const Gnome::Gda::Value& value)
 
   if(value.get_value_type() == GDA_TYPE_BINARY)
   {
-    std::streamsize size = 0;
+    long size = 0;
     gconstpointer pData = value.get_binary(size);
     if(size && pData)
     {
